grammar.js
    module: $ =>
      seq(
        optional($.version_declaration),
        choice($._library_module, $._main_module)
      ),
    _library_module: $ => seq($.module_declaration, $._prolog),
    _main_module: $ => seq(optional($._prolog), $._query_body),
    _expr: $ => choice( // statement like expressions all prec 2
      $._primary_expr,
      $.flwor_expr,
     $.quantified_expr,
     $.switch_expr,
     $.if_expr,
     $.typeswitch_expr,
     $.try_catch_expr,
    $.or_expr, // 83             prec: 3
    $.and_expr, // 84            prec: 4
    $.comparison_expr, // 85     prec: 5
    $.string_concat_expr, // 86  prec: 6
    $.range_expr, // 87          prec: 7
    $.additive_expr, // 88       prec: 8
    $.multiplicative_expr, // 89 prec: 9
    $.union_expr, // 90          prec: 10 
    $.intersect_except_expr,//91 prec: 11
    $.instance_of_expr, // 92    prec: 12
    $.treat_expr, // 93          prec: 13
    $.castable_expr, // 94       prec: 14
    $.cast_expr, // 95           prec: 15
    $.arrow_expr, // 96          prec: 16
    $.unary_expr, //  97         prec: 17 '-' '+' arithmetic prefix right to left
    $.bang_expr, //107           prec: 18
    $.path_expr, //108           prec: 19   '/' '//'  not relative path?
      //  $.predicate //124        prec: 20 @primary postfix predicate '[' ']'
      //  $.postfix_lookup //125   prec: 20 @primary postfix lookup   '?'
      //  $.unary_lookup,// 181    prec: 21 @primary unary lookup
      //seq($._primary_expr, optional( $._postfix_expr )) 
    ),
    // 3.1 Primary Expressions
    string_literal: $ => choice(
        seq( '"', repeat(choice($.predefined_entity_ref, $.char_ref, $.escape_quote, /[^"&]/)),'"'),
        seq( "'", repeat(choice($.predefined_entity_ref, $.char_ref, $.escape_apos, /[^'&]/)),"'")),
    var_ref: $ => seq('$',  $.EQName ),
    // note: a dynamic function call can consist of _postfix_expr [ var_ref + argument_list ]
    // 3.1.3 Parenthesized Expressions
    context_item_expr: $ => prec.left(seq('.', optional( $.path_expr))),
    //3.1.5 Static Function Calls
    function_call: $ => prec.left(25,seq( 
      choice( field( 'dynamic', $.var_ref),field('static', $.EQName)),
      $.argument_list)), // 137 spec deviation added $var_ref
    //function_call: $ => prec.left(25 ,seq( $.EQName, $.argument_list)), // 137
    // 3.1.6 Named Function References
    predicate: $ => prec(20, seq( '[', field('filter', $._expr ), ']')), //124
    // 3.2.2 Dynamic Function Calls
    argument_list: $ => prec(1,seq('(', commaSep($.argument), ')')), // 122
    argument: $ => choice($._expr, $.argument_placeholder), // 138
    path_expr: $ => prec.left(19, 
      choice(
        seq('/', optional($._relative_path_expr)), //parse-note-leading-lone-slash
        seq( '//', $._relative_path_expr ),  // must have relative_path_expr 
        $._relative_path_expr  // can stand alone
      )
    ),
    _relative_path_expr: $ => prec.left(seq($._step_expr, optional( repeat1 (seq( choice('/', '//'), $._step_expr))))), //109 
    abbrev_forward_step: $ => seq(optional($.abbrev_attr), $._node_test), // 117
    abbrev_attr: $ => '@',
    // 3.3.2.1 Axes
    abbrev_reverse_step: $ => '..', // 117
    _node_test: $ => choice( $._kind_test, $.name_test), // 118'

    comparison_expr: $ => prec.left(5,seq(field('lhs',$._expr),choice('eq','ne','lt','le','gt','ge','=','!=','<','<=','>','>=','is','<<','>>'),field('rhs',$._expr))),
    any_kind_test: $ => seq('node','(',')'), // 189
    text_test: $ => seq('text', '(',')'), // 191
    wildcard: $ =>
      choice( '*',
        seq($.NCName, ':*' ),
        seq('*:', $.NCName),
        seq($.braced_uri_literal, '*')
      ), // 120
    integer_literal: $ => token(INTEGER),
    identifier: $ => /[_A-Za-z]{1}[\-\w]*/,
